[gd_scene load_steps=5 format=3 uid="uid://byiadojpflj2h"]

[ext_resource type="Script" path="res://weapon.gd" id="1_piwpx"]

[sub_resource type="Animation" id="Animation_u5m4a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(84, -26)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.354302]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Marker2D/Sprite2D/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2nx4g"]
resource_name = "sword"
length = 0.31
step = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333, 0.0666, 0.0666667, 0.0999, 0.1332, 0.1665, 0.1998, 0.2331, 0.2664),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(84, -56), Vector2(84, -56), Vector2(84, -26), Vector2(106, -42), Vector2(120, -24), Vector2(124, -4.00001), Vector2(121, 15), Vector2(111, 37), Vector2(90, 53)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333, 0.0666667, 0.1332, 0.1998, 0.2664),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-0.354302, -0.354302, 0.462512, 1.1205, 1.93732]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333, 0.0666, 0.0999, 0.1332, 0.1665, 0.1998, 0.2331, 0.2664, 0.2997, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, true, true, true, true, true, true, true, false, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Marker2D/Sprite2D/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333, 0.0666, 0.0999, 0.133333, 0.1665, 0.1998, 0.2331, 0.2664, 0.2997, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, false, false, false, false, false, false, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3bdbl"]
_data = {
"RESET": SubResource("Animation_u5m4a"),
"sword": SubResource("Animation_2nx4g")
}

[node name="Weapon" type="Node2D"]
script = ExtResource("1_piwpx")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Marker2D"]
visible = false
position = Vector2(84, -26)
rotation = -0.354302
scale = Vector2(4.70312, 4.70312)

[node name="HitBox" type="Area2D" parent="Marker2D/Sprite2D"]
unique_name_in_owner = true
position = Vector2(-2.74562, 3.74518)
rotation = 0.784477
scale = Vector2(0.212625, 0.212625)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Marker2D/Sprite2D/HitBox"]
position = Vector2(0.25647, -21.0222)
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_3bdbl")
}

[node name="DamageTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="body_entered" from="Marker2D/Sprite2D/HitBox" to="." method="_on_hit_box_body_entered"]
